--- a/codes/template.html
+++ b/codes/template.html
@@ -21,7 +21,7 @@
         </p>
     
         <p>
-            <b>less important strong</b>
+            <b>less important strong</b><br>
             <i>less important italic</i>
         </p>
     </div>
